code/human_written_tests/WebAssembly/processed_control_flow_validation/test_loop_31.wast
(assert_invalid
  (module (func $type-param-void-vs-num
    (loop (param i32) (drop))
  ))
  "type mismatch"
)